--- a/dist.ini
+++ b/dist.ini
@@ -7,18 +7,89 @@ copyright_holder = Kent Fredric <kentfredric@gmail.com>
 ; Uncomment this to bootstrap via self 
 ; [Bootstrap::lib]
 
-[@Author::KENTNL]
-:version          = 1.2.0
-git_versions      = 1
-; version_major     = 0
-; version_minor     = 1
-; the following data denotes when this minor was minted
-; version_rel_year  = 2013
-; version_rel_month = 2
-; version_rel_day   = 11
-; version_rel_hour  = 20
-; version_rel_time_zone = Pacific/Auckland
-twitter_hash_tags = #perl #cpan
-; auto_prereqs_skip = File::Find
+[Git::NextVersion]
+version_regexp = ^(.*)-source$
+first_version  = 0.001000
+
+[MetaConfig]
+
+[GithubMeta]
+issues = 1
+
+[MetaProvides::Package]
+
+[MetaData::BuiltWith]
+show_uname = 1
+uname_args = -s -o -r -m -i
+show_config = 1
+
+[Git::GatherDir]
+include_dotfiles = 1
+
+[License]
+[MetaJSON]
+[MetaYAML]
+[Manifest]
+[PodCoverageTests]
+[PodSyntaxTests]
+[ReportVersions::Tiny]
+[Test::Kwalitee]
+
+[EOLTests]
+trailing_whitespace = 1
+
+[Test::MinimumVersion]
+[Test::Compile]
+[Test::Perl::Critic]
+
+[PruneCruft]
+except = ^.perltidyrc
+
+[ManifestSkip]
+
+[PkgVersion]
+[PodWeaver]
+
+[NextRelease]
+time_zone = UTC
+format = %v %{yyyy-MM-dd'T'HH:MM:ss}dZ
+
+[AutoPrereqs]
+[Author::KENTNL::MinimumPerl]
+[Author::KENTNL::Prereqs::Latest::Selective]
+[Authority]
+authority = cpan:KENTNL
+do_metadata = 1
+
+[ModuleBuild]
+[ReadmeFromPod]
+[ReadmeAnyFromPod]
+type = markdown
+filename = README.mkdn
+location = root
+
+[Test::CPAN::Changes]
+[CheckExtraTests]
+[TestRelease]
+[ConfirmRelease]
+
+[Git::Check]
+filename = Changes
+
+[Git::Tag / tag_master]
+tag_format = %v-source
+
+[Git::Commit]
+[Git::CommitBuild]
+release_branch = releases
+
+[Git::Tag / tag_release]
+branch = releases
+tag_format = %v
+
+[UploadToCPAN]
+[Twitter]
+hash_tags = #perl #cpan
+tweet_url = https://metacpan.org/source/{{$AUTHOR_UC}}/{{$DIST}}-{{$VERSION}}{{$TRIAL}}/Changes
 
 [Prereqs]
